# tactics2d

./: .clang-format  .codacy.yml  .codecov.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  README.CN.md  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.claude/: pytest_style_guide.md  settings.json
.claude/hooks/: check_changelog.py  check_pytest_style.py  check_python_header.py
.claude/rules/: CHANGELOG_RULE.md  README.md  changelog_check.json  pytest_style.json  python_header.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug_report.md  2-feature_request.md  bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/scripts/: check_pypi_version.py  create_source_archive.py  extract_changelog.py  get_version.py
.github/workflows/: codeql.yml  format_code.yml  map_parser.yml  publish_to_pypi.yml  publish_to_pypi_and_github.yml  publish_to_test_pypi.yml  sync_changelog.yml  tag_on_PR.yml  test_modules.yml  test_parsers.yml
classify_interaction/: levelX_parser_pedestrian_and_cyclist.py  svm_train.py  test_svm_classify.py
data/highD_map/: highD_1.net.xml  highD_2.net.xml  highD_2.osm  highD_3.net.xml  highD_3.osm  highD_4.net.xml  highD_4.rou.xml  highD_5.net.xml  highD_5.osm  highD_6.net.xml  highD_6.rou.xml
data/inD_map/: inD_1.osm  inD_2.osm  inD_3.osm  inD_4.osm
data/rounD_map/: rounD_0.osm  rounD_1.osm
default_data/map_configs/: INTERACTION.config  highD.config
default_data/maps/: I_INTERACTION_0_USA.osm  I_INTERACTION_3_USA.osm  R_INTERACTION_0_DEU.osm
docs/: api_dataset_parser.md  api_map.md  api_math.md  api_physics.md  api_scenario.md  api_sensor.md  api_trajectory.md  api_vehicle_physics.md  community.md  dataset-overview.md  index.md  installation.md  publication.md  python_api.md  quick_start.md  reference.md  references.md  release_notes.md  requirements.txt  tactics2d_doc.drawio
docs/api/: controller.md  envs.md  map.md  math.md  participant.md  physics.md  traffic.md
docs/css/: extra.css  extra_for_material.css  extra_for_readthedoc.css  hide_code.css
docs/dataset-support/: citysim.md  driveinsightd.ipynb
docs/dataset_support/: citysim.ipynb  dlp.ipynb  driveinsightd.ipynb  exid.ipynb  highd.ipynb  ind.ipynb  index.md  nuplan.ipynb  round.ipynb  unid.ipynb  womd.ipynb
docs/javascripts/: hide_code.js  katex.js
docs/tutorial/: classical_planner_demo.ipynb  custom.md  dataset_visualization.ipynb  graph_search_demo.ipynb  interpolator_demo.ipynb  interpolator_visualization.ipynb  parking_agent.pth  quick_start.md  racing_pure_pursuit_demo.ipynb  routing.ipynb  sampling_search_demo.ipynb  seach_based_demo.ipynb  search_demo.ipynb  train_parking_demo.ipynb  train_racing_agent.py
gym_env/: car_racing.py  racing.py
homework/: AU7043_project_1_2025.py  AU7043_project_1_2026.py  AU7043_project_2_2025.py  car_following.py  get_target_vehicles.py  lane_changing.py
samples/: action_mask.py  dataset_visualization.ipynb  demo_ppo.backup  demo_ppo.py  parking_config.py  requirements.txt  rs_path.py  rs_planner.py  tmp_config.py  train_parking.py  train_parking_agent.py  train_parking_demo.py  train_parking_lot.py  train_racing_agent.py  trainer_parking_lot.py  visualize_dataset.py  visualize_interpolators.py
scripts/: docker.sh  pytest-ubuntu2004.sh  update_version.py
tactics2d/: __init__.py  cli.py
tactics2d/behavior/: __init__.py  idm.py
tactics2d/common/: bezier.py  get_circle.py
tactics2d/controller/: __init__.py  acceleration_controller.py  controller_base.py  idm_controller.py  pid_controller.py  pure_pursuit_controller.py
tactics2d/data/: map_default.config
tactics2d/dataset_parser/: __init__.py  map.config  parse_argoverse.py  parse_argoverse2.py  parse_citysim.py  parse_dlp.py  parse_driveinsightd.py  parse_interaction.py  parse_levelx.py  parse_ngsim.py  parse_nuplan.py  parse_womd.py  parser_nuplan.py  parser_womd.py
tactics2d/envs/: __init__.py  car_following.py  dataset_replay_base.py  lidar_simulator.py  observation_processor.py  parking.py  parking_base.py  racing.py  status.py  sumoenv.py  urban.py
tactics2d/frontend/: matplotlib_renderer.py  webgl_renderer.py
tactics2d/geometry/: __init__.py  circle.py  direction.py
tactics2d/interpolator/: __init__.py  b_spline.py  bezier.py  clothoid.py  cubic_spline.py  dubins.py  param_poly3.py  reeds_shepp.py  spiral.py
tactics2d/interpolator/cpp_interpolator/: CMakeLists.txt
tactics2d/interpolator/cpp_interpolator/include/: b_spline.h  b_spline.hpp  bezier.h  bezier.hpp  cubic_spline.h  cubic_spline.hpp
tactics2d/interpolator/cpp_interpolator/src/: b_spline.cpp  bezier.cpp  cubic_spline.cpp  interpolator_bindings.cpp
tactics2d/math/cpp_function/: CMakeLists.txt
tactics2d/math/cpp_function/include/: b_spline.h  bezier.h  circle.h  cubic_spline.h
tactics2d/math/cpp_function/src/: b_spline.cpp  bezier.cpp  circle.cpp  cubic_spline.cpp  pybind11_bindings.cpp
test/: requirements.txt  test_map_element.py  test_map_generator.py  test_map_parser.py  test_physics.py  test_render.py
tests/: conftest.py  pytest.ini  requirements.txt  run_final_sim.py  svm_model.m  test_camera.py  test_controllers.py  test_curve_planner.py  test_dataset_parser.py  test_driveinsightd.py  test_env.py  test_interpolate.py  test_interpolator.py  test_map_converter.py  test_map_element.py  test_map_generator.py  test_map_optimizations.py  test_map_parser.py  test_map_render.py  test_math_interpolate.py  test_matplotlib_renderer.py  test_parking.py  test_parser.py  test_participant.py  test_physics.py  test_render.py  test_render_integration.py  test_routing.py  test_routing_costs.py  test_search.py  test_search_graph.py  test_searcher.py  test_sensor.py  test_sensor_utils.py  test_traffic.py  test_trajgen.py  test_util.py  test_xodr_load.py  verify_logic.py
tutorial/: action_mask.py  rs_planner.py  train_parking_agent.py  train_racing_agent.py
utils/: test_svm_classify.py  train_participant_classifier.ipynb  visualize.py
(+370 files in other folders)
