[project]
name = "tactics2d"
version = "0.1.8rc1"
description = "Tactics2D: A Reinforcement Learning Environment Library with Generative Scenarios for Driving Decision-making"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">= 3.8"
keywords = ["reinforcement-learning", "environment", "simulator", "decision-making", "traffic-behavior"]
authors = [
    { name = "Yueyuan Li", email = "rowena.academic@gmail.com" }
]
maintainers = [
    { name = "Yueyuan Li", email = "rowena.academic@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dynamic = ["dependencies"]

[project.scripts]
tactics2d = "tactics2d.cli:main"

[project.urls]
Documentation = "https://tactics2d.readthedocs.io/en/latest/"
Repository = "https://github.com/WoodOxen/tactics2d"

[project.optional-dependencies]
test = [
    "Pillow>=9.5.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
]
dev = [
    "pre-commit==3.5.0",
    "black",
    "isort",
    "clang-format",
]

[build-system]
requires = [
    "setuptools >= 60.0.0",
    "wheel",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
tactics2d = [
    "tactics2d/participant/trajectory_classifier.m",
    "tactics2d/frontend/static/**",
    "tactics2d/frontend/templates/*",
]

[tool.setuptools.packages.find]
exclude = ["test", "tactics2d/data/"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
