[metadata]
name = tactics2d
version = 0.0.1
author = WoodOxen
author_email = rowena.academic@gmail.com
description = 
long_description = file: README.md
long_description_content_type= text/markdown
keywords = 
    simulator
    autonomous driving
url = https://github.com/WoodOxen/tactics2d
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux

[options]
zip_safe = False
python_requires = >=3.7.0
include_package_data = True
pakage_dir = 
    =tactics2d
packages = find:
install_requires = 
    gymnasium == 0.28.1
    numpy >= 1.21.6
    pandas >= 1.3.5
    pygame == 2.5.2
    pyproj >= 3.2.1
    scikit-learn >= 1.0.2
    shapely == 2.0.1
tests_require = 
    black
    pillow
    pytest

[options.packages.find]
where = tactics2d

[options.package_data]
tactics2d.data.map.highD =
    *.osm
tactics2d.data.trajectory_sample.highD =
    *.csv