[metadata]
name = tactics2d
version = 0.1.2
author = WoodOxen
author_email = rowena.academic@gmail.com
description = A traffic environment simulator for driving policy development.
long_description = file: README.md
long_description_content_type= text/markdown
keywords =
    simulator
    autonomous driving
    reinforcement learning
    traffic behavior
url = https://github.com/WoodOxen/tactics2d
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False
python_requires = >=3.8.0
include_package_data = True
package_dir =
    =tactics2d
packages = find:
exclude =
    samples
    tests
install_requires =
    fastparquet>=2022.11.0
    geopandas>=0.10.2
    gymnasium>=0.28.0
    joblib>=1.3.2
    matplotlib>=3.7.0, <3.8.0
    numpy>=1.21.5
    pandas>=1.5.3
    protobuf<=3.20.3
    pygame>=2.5.2
    pyogrio==0.7.2
    pyproj>=3.2.1
    scikit-learn>=1.0.0
    scipy>=1.7.3
    shapely>=2.0.2
    tabulate>=0.9.0
    tensorflow<=2.14.0
tests_require =
    bezier>=2021.2.12
    Pillow>=9.5.0
    pytest>= 7.4.4
    pytest-cov>=4.1.0

[options.packages.find]
where = tactics2d

[options.package_data]
